Correcciones primera version. Quedan pendientes cambios en Ch 4 y Ch5.

--- a/Libro_Trabajo_de_Grado/TesisPregrado.bib
+++ b/Libro_Trabajo_de_Grado/TesisPregrado.bib
@@ -11,6 +11,19 @@
   author = {Abbott, B. P. and Abbott, R. and Abbott, T. D. and Acernese, F. and others}
 }
 
+@article{abbottGWTC21DeepExtended2024,
+  title = {{{GWTC-2}}.1: {{Deep}} Extended Catalog of Compact Binary Coalescences Observed by {{LIGO}} and {{Virgo}} during the First Half of the Third Observing Run},
+  shorttitle = {{{GWTC-2}}.1},
+  year = 2024,
+  journal = {Phys. Rev. D},
+  volume = {109},
+  number = {2},
+  pages = {022001},
+  doi = {10.1103/PhysRevD.109.022001},
+  langid = {english},
+  author = {Abbott, R. and Abbott, T. D. and Acernese, F. and Ackley, K. and others}
+}
+
 @article{abreuSoundSpeedsCracking2007,
   title = {Sound Speeds, Cracking and the Stability of Self-Gravitating Anisotropic Compact Objects},
   year = 2007,
@@ -133,6 +146,19 @@
   author = {Baym, Gordon and Bethe, Hans A. and Pethick, Christopher J}
 }
 
+@article{becerraRealisticAnisotropicNeutron2024,
+  title = {Realistic Anisotropic Neutron Stars: {{Pressure}} Effects},
+  shorttitle = {Realistic Anisotropic Neutron Stars},
+  year = 2024,
+  journal = {Phys. Rev. D},
+  volume = {109},
+  number = {4},
+  pages = {043025},
+  doi = {10.1103/PhysRevD.109.043025},
+  langid = {english},
+  author = {Becerra, L. M. and {Becerra-Vergara}, E. A. and {Lora-Clavijo}, F. D.}
+}
+
 @article{biswasGW190814PropertiesSecondary2021,
   title = {{{GW190814}}: On the Properties of the Secondary Component of the Binary},
   shorttitle = {{{GW190814}}},
@@ -210,27 +236,16 @@
   author = {Chin, S.A. and Walecka, J.D.}
 }
 
-@misc{choudhuryNICERViewNearest2024,
-  title = {A {{NICER View}} of the {{Nearest}} and {{Brightest Millisecond Pulsar}}: {{PSR J0437-4715}}},
+@article{choudhuryNICERViewNearest2024b,
+  title = {A {{NICER View}} of the {{Nearest}} and {{Brightest Millisecond Pulsar}}: {{PSR J0437}}--4715},
   shorttitle = {A {{NICER View}} of the {{Nearest}} and {{Brightest Millisecond Pulsar}}},
   year = 2024,
-  eprint = {2407.06789},
+  journal = {ApJL},
+  volume = {971},
+  number = {1},
+  pages = {L20},
   doi = {10.3847/2041-8213/ad5a6f},
-  archiveprefix = {arXiv},
-  keywords = {Astrophysics - High Energy Astrophysical Phenomena,Astrophysics - Solar and Stellar Astrophysics,Nuclear Theory},
   author = {Choudhury, Devarshi and Salmi, Tuomo and Vinciguerra, Serena and Riley, Thomas E. and others}
-}
-
-@misc{collaborationGWTC21DeepExtended2022,
-  title = {{{GWTC-2}}.1: {{Deep Extended Catalog}} of {{Compact Binary Coalescences Observed}} by {{LIGO}} and {{Virgo During}} the {{First Half}} of the {{Third Observing Run}}},
-  shorttitle = {{{GWTC-2}}.1},
-  year = 2022,
-  number = {arXiv:2108.01045},
-  eprint = {2108.01045},
-  publisher = {arXiv},
-  archiveprefix = {arXiv},
-  keywords = {General Relativity and Quantum Cosmology},
-  author = {Collaboration, The LIGO Scientific and Collaboration, the Virgo and Abbott, R. and Abbott, T. D. and others}
 }
 
 @article{damourRelativisticTidalProperties2009,
@@ -417,16 +432,17 @@
   author = {Horowitz, C. J. and Piekarewicz, J. and Reed, Brendan}
 }
 
-@misc{horvathBirthEventsMasses2020,
-  title = {Birth Events, Masses and the Maximum Mass of {{Compact Stars}}},
-  year = 2020,
-  number = {arXiv:2011.08157},
-  eprint = {2011.08157},
-  publisher = {arXiv},
-  doi = {10.48550/arXiv.2011.08157},
-  archiveprefix = {arXiv},
-  keywords = {Astrophysics - High Energy Astrophysical Phenomena},
-  author = {Horvath, Jorge E. and Rocha, L{\'i}via S. and Bernardo, Ant{\^o}nio L. C. and {\noopsort{avellar}}de Avellar, Marcio G. B. and others}
+@inbook{horvathBirthEventsMasses2022,
+  title = {Birth {{Events}}, {{Masses}} and the {{Maximum Mass}} of {{Compact Stars}}},
+  booktitle = {Astrophysics in the {{XXI Century}} with {{Compact Stars}}},
+  year = 2022,
+  pages = {1--51},
+  publisher = {WORLD SCIENTIFIC},
+  doi = {10.1142/9789811220944_0001},
+  isbn = {978-981-12-2093-7 978-981-12-2094-4},
+  langid = {english},
+  author = {Horvath, Jorge E. and Rocha, Livia S. and Bernardo, Antonio L.C. and De Avellar, Marcio G.B. and others},
+  collaborator = {Vasconcellos, C{\'e}sar Augusto Zen and Weber, Fridolin}
 }
 
 @article{huangConstrainingRelativisticMean2024,
@@ -521,7 +537,7 @@
 @article{millerPSRJ0030+0451Mass2019,
   title = {{{PSR J0030}}+0451 {{Mass}} and {{Radius}} from {{NICER Data}} and {{Implications}} for the {{Properties}} of {{Neutron Star Matter}}},
   year = 2019,
-  journal = {The Astrophysical Journal},
+  journal = {ApJL},
   volume = {887},
   pages = {L24},
   publisher = {IOP},
@@ -554,16 +570,16 @@
   author = {Misner, Charles W. and Thorne, Kip S. and Wheeler, John Archibald and Kaiser, David and others}
 }
 
-@misc{moustakidisStabilityRelativisticStars2017,
+@article{moustakidisStabilityRelativisticStars2017a,
   title = {The Stability of Relativistic Stars and the Role of the Adiabatic Index},
   year = 2017,
-  number = {arXiv:1612.01726},
-  eprint = {1612.01726},
-  publisher = {arXiv},
-  doi = {10.48550/arXiv.1612.01726},
-  archiveprefix = {arXiv},
-  keywords = {Astrophysics - High Energy Astrophysical Phenomena,Astrophysics - Solar and Stellar Astrophysics,General Relativity and Quantum Cosmology,Nuclear Theory},
-  author = {Moustakidis, Ch C.}
+  journal = {Gen Relativ Gravit},
+  volume = {49},
+  number = {5},
+  pages = {68},
+  doi = {10.1007/s10714-017-2232-9},
+  langid = {english},
+  author = {Moustakidis, {\relax Ch}. C.}
 }
 
 @article{mullerRelativisticMeanfieldTheory1996,
@@ -751,15 +767,13 @@
   author = {Sakuragi, Yukinori}
 }
 
-@misc{schwarzschildGravitationalFieldMass1999,
-  title = {On the Gravitational Field of a Mass Point According to {{Einstein}}'s Theory},
-  year = 1999,
-  number = {arXiv:physics/9905030},
-  eprint = {physics/9905030},
-  publisher = {arXiv},
-  doi = {10.48550/arXiv.physics/9905030},
-  archiveprefix = {arXiv},
-  keywords = {General Relativity and Quantum Cosmology,Physics - History and Philosophy of Physics},
+@article{schwarzschildGravitationalFieldMass1916,
+  title = {On the {{Gravitational Field}} of a {{Mass Point According}} to {{Einstein}}'s {{Theory}}},
+  year = 1916,
+  journal = {Sitzungsberichte der K\"oniglich Preussischen Akademie der Wissenschaften},
+  volume = {1916},
+  pages = {189--196},
+  annotation = {ADS Bibcode: 1916AbhKP1916..189S},
   author = {Schwarzschild, K.}
 }
 
@@ -787,18 +801,6 @@
   author = {Shapiro, Stuart L. and Teukolsky, Saul A.}
 }
 
-@article{tayaEstimationElectricField2024,
-  title = {Estimation of Electric Field in Intermediate-Energy Heavy-Ion Collisions},
-  year = 2024,
-  journal = {Phys. Rev. C},
-  volume = {110},
-  number = {1},
-  pages = {014901},
-  doi = {10.1103/PhysRevC.110.014901},
-  langid = {english},
-  author = {Taya, Hidetoshi and Nishimura, Toru and Ohnishi, Akira}
-}
-
 @article{theligoscientificcollaborationGW170817ObservationGravitational2017,
   title = {{{GW170817}}: {{Observation}} of {{Gravitational Waves}} from a {{Binary Neutron Star Inspiral}}},
   shorttitle = {{{GW170817}}},
@@ -815,7 +817,7 @@
 }
 
 @article{theligoscientificcollaborationGW190814GravitationalWaves2020,
-  title = {{{GW190814}}: {{Gravitational Waves}} from the {{Coalescence}} of a 23 {{M}}\$\_\textbackslash odot\$ {{Black Hole}} with a 2.6 {{M}}\$\_\textbackslash odot\$ {{Compact Object}}},
+  title = {{{GW190814}}: {{Gravitational Waves}} from the {{Coalescence}} of a 23 {{M Black Hole}} with a 2.6 {{M Compact Object}}},
   shorttitle = {{{GW190814}}},
   year = 2020,
   journal = {ApJL},
@@ -829,15 +831,15 @@
   author = {The LIGO Scientific Collaboration and {\noopsort{virgo collaboration}}{the Virgo Collaboration} and Abbott, R. and Abbott, T. D. and others}
 }
 
-@misc{vollickMeaningVariousMass2021,
-  title = {On the {{Meaning}} of {{Various Mass Definitions}} for {{Asymptotically Flat Spacetimes}}},
-  year = 2021,
-  number = {arXiv:2101.12570},
-  eprint = {2101.12570},
-  publisher = {arXiv},
-  doi = {10.48550/arXiv.2101.12570},
-  archiveprefix = {arXiv},
-  keywords = {General Relativity and Quantum Cosmology},
+@article{vollickMeaningVariousMass2023,
+  title = {On the Meaning of Various Mass Definitions for Asymptotically Flat Spacetimes},
+  year = 2023,
+  journal = {Can. J. Phys.},
+  volume = {101},
+  number = {1},
+  pages = {9--16},
+  doi = {10.1139/cjp-2022-0023},
+  langid = {english},
   author = {Vollick, Dan N.}
 }
 
