--- a/Libro_Trabajo_de_Grado/main.tex
+++ b/Libro_Trabajo_de_Grado/main.tex
@@ -226,9 +226,9 @@
 \begin{flushleft}
     {\huge\bfseries Resumen\par}
     \vspace{0.5cm}
-    En este trabajo se estudió la ecuación de estado de la materia nuclear en condiciones de alta densidad, aplicable al interior de estrellas de neutrones, utilizando el marco de la Teoría de Campo Medio Relativista con acoplamientos no lineales. El objetivo principal fue construir modelos que satisfagan las restricciones astrofísicas actuales y examinar la viabilidad de estrellas de neutrones masivas que puedan reproducir las observaciones más recientes. Se exploró el espacio de parámetros del modelo, analizando las correlaciones entre los acoplamientos de los campos mesónicos ($\sigma, \omega, \rho$) junto con los parámetros de autointeracción escalar, y las propiedades macroscópicas estelares obtenidas mediante la integración de las ecuaciones de Tolman-Oppenheimer-Volkoff.
+    En este trabajo se estudió la ecuación de estado de la materia nuclear en condiciones de alta densidad, que describe la materia al interior de estrellas de neutrones, utilizando la Teoría Relativista de Campo Medio con acoplamientos no lineales. El objetivo principal fue construir ecuaciones de estado para estrellas de neutrones que satisfagan las restricciones astrofísicas actuales y examinar la viabilidad de estrellas de neutrones masivas que puedan reproducir las observaciones más recientes. Se exploró el espacio de parámetros del modelo relativista de campo medio, analizando las correlaciones entre los acoplamientos de los campos mesónicos ($\sigma, \omega, \rho$) junto con los parámetros de autointeracción escalar, y las propiedades macroscópicas estelares obtenidas mediante la integración de las ecuaciones de Tolman-Oppenheimer-Volkoff.
 
-    Los resultados mostraron una jerarquía en la influencia de los parámetros: los acoplamientos isoescalares $A_\sigma, A_\omega$ y los términos de autointeracción $b, c$ gobiernan la rigidez de la ecuación de estado y la masa máxima, mientras que el acoplamiento isovectorial $A_\rho$ afecta casi exclusivamente al radio y a la energía de simetría, sin alterar las propiedades de saturación ni el límite de masa. Este modelo permitió encontrar configuraciones que satisfacen simultáneamente las restricciones nucleares y astrofísicas. Se obtuvieron estrellas con masas máximas de hasta $2.79 \masasol$, compatibles con el componente secundario de \textit{GW190814}, y radios para estrellas canónicas ($1.4 \masasol$) consistentes con las observaciones de NICER. Finalmente, se verificó el cumplimiento de las condiciones de aceptabilidad física, garantizando la causalidad y estabilidad mecánica de las soluciones.
+    Los resultados mostraron una jerarquía en la influencia de los parámetros: los acoplamientos isoescalares $A_\sigma, A_\omega$ y los términos de autointeracción $b$ y $c$ gobiernan la rigidez de la ecuación de estado y la masa máxima, mientras que el acoplamiento isovectorial $A_\rho$ afecta el radio de la estrella y la energía de simetría, sin alterar las propiedades de saturación ni el límite de masa máxima. El modelo construido permitió encontrar configuraciones que satisfacen simultáneamente las restricciones nucleares y astrofísicas. Se obtuvieron estrellas con masas máximas de hasta $2.79 \masasol$, compatibles con el componente secundario de \textit{GW190814}, y radios para estrellas canónicas ($1.4 \masasol$) consistentes con las observaciones de NICER. Finalmente, se verificó el cumplimiento de las condiciones de aceptabilidad física, garantizando la causalidad y estabilidad mecánica de las soluciones.
 
     
 \end{flushleft}
