Revisión de escritura e inclusión de algunas referencias en conclusiones.

--- a/Libro_Trabajo_de_Grado/TesisPregrado.bib
+++ b/Libro_Trabajo_de_Grado/TesisPregrado.bib
@@ -74,14 +74,14 @@
   author = {Antoniadis, John and Freire, Paulo C. C. and Wex, Norbert and Tauris, Thomas M. and others}
 }
 
-@misc{ascenziNeutronstarMeasurementsMultimessenger2024,
-  title = {Neutron-Star {{Measurements}} in the {{Multi-messenger Era}}},
+@article{ascenziNeutronstarMeasurementsMultimessenger2024,
+  title = {Neutron-Star Measurements in the Multi-Messenger {{Era}}},
   year = 2024,
-  number = {arXiv:2401.14930},
-  eprint = {2401.14930},
-  publisher = {arXiv},
-  archiveprefix = {arXiv},
-  keywords = {Astrophysics - High Energy Astrophysical Phenomena,Astrophysics - Instrumentation and Methods for Astrophysics,Astrophysics - Solar and Stellar Astrophysics,General Relativity and Quantum Cosmology,Nuclear Theory},
+  journal = {Astroparticle Physics},
+  volume = {158},
+  pages = {102935},
+  doi = {10.1016/j.astropartphys.2024.102935},
+  langid = {english},
   author = {Ascenzi, Stefano and Graber, Vanessa and Rea, Nanda}
 }
 
@@ -384,14 +384,14 @@
   author = {Guo, Ling-Jun and Xiong, Jia-Ying and Ma, Yao and Ma, Yong-Liang and others}
 }
 
-@misc{guoWhiteDwarfStructure2024,
-  title = {White {{Dwarf Structure}} and {{Binary Inspiral Gravitational Waves}} from {{Quantum Hadrodynamics}}},
-  year = 2024,
-  number = {arXiv:2410.06088},
-  eprint = {2410.06088},
-  publisher = {arXiv},
-  archiveprefix = {arXiv},
-  keywords = {Astrophysics - High Energy Astrophysical Phenomena,Nuclear Theory},
+@article{guoWhiteDwarfStructure2025,
+  title = {White Dwarf Structure and Binary Inspiral Gravitational Waves from Quantum Hadrodynamics},
+  year = 2025,
+  journal = {Commun. Theor. Phys.},
+  volume = {77},
+  number = {12},
+  pages = {125301},
+  doi = {10.1088/1572-9494/add866},
   author = {Guo, Ling-Jun and Ma, Yao and Ma, Yong-Liang and Wu, Ruo-Xi and others}
 }
 
