Cambios de forma y ligeros de redacción

--- a/Libro_Trabajo_de_Grado/TesisPregrado.bib
+++ b/Libro_Trabajo_de_Grado/TesisPregrado.bib
@@ -547,6 +547,18 @@
   author = {Miller, M. C. and Lamb, F. K. and Dittmann, A. J. and Bogdanov, S. and others}
 }
 
+@misc{millerRadiusPSRJ043747152025,
+  title = {The {{Radius}} of {{PSR J0437-4715}} from {{NICER Data}}},
+  year = 2025,
+  number = {arXiv:2512.08790},
+  eprint = {2512.08790},
+  publisher = {arXiv},
+  doi = {10.48550/arXiv.2512.08790},
+  archiveprefix = {arXiv},
+  keywords = {Astrophysics - High Energy Astrophysical Phenomena,General Relativity and Quantum Cosmology,Nuclear Theory},
+  author = {Miller, M. C. and Dittmann, A. J. and Holt, I. M. and Lamb, F. K. and others}
+}
+
 @article{millerRadiusPSRJ0740+66202021,
   title = {The {{Radius}} of {{PSR J0740}}+6620 from {{NICER}} and {{XMM-Newton Data}}},
   year = 2021,
