--- a/Libro_Trabajo_de_Grado/main.tex
+++ b/Libro_Trabajo_de_Grado/main.tex
@@ -173,7 +173,7 @@
     {\scshape\Large Facultad de Ciencias \par}
     {\scshape\Large Escuela de Física \par}
     {\scshape\Large Bucaramanga \par}
-    {\scshape\Large 2025 \par}
+    {\scshape\Large 2026 \par}
 \end{titlepage}
 
 
@@ -226,9 +226,7 @@
 \begin{flushleft}
     {\huge\bfseries Resumen\par}
     \vspace{0.5cm}
-    En este trabajo se estudió la ecuación de estado de la materia nuclear en condiciones de alta densidad, que describe la materia al interior de estrellas de neutrones, utilizando la Teoría Relativista de Campo Medio. El objetivo principal fue construir ecuaciones de estado para estrellas de neutrones que satisfagan las restricciones nucleares y astrofísicas actuales, y examinar la viabilidad de estrellas de neutrones masivas que puedan reproducir las observaciones más recientes. Se exploró el espacio de parámetros del modelo relativista de campo medio, analizando las correlaciones entre los acoplamientos de los campos mesónicos ($\sigma, \omega, \rho$) junto con los parámetros de autointeracción escalar, y las propiedades macroscópicas estelares obtenidas mediante la integración de las ecuaciones de Tolman-Oppenheimer-Volkoff.
-
-    Los resultados mostraron una jerarquía en la influencia de los parámetros: los acoplamientos isoescalares $A_\sigma, A_\omega$ y los términos de autointeracción $b$ y $c$ gobiernan la rigidez de la ecuación de estado y la masa máxima, mientras que el acoplamiento isovectorial $A_\rho$ afecta el radio de la estrella y la energía de simetría, sin alterar las propiedades de saturación ni el límite de masa máxima. El modelo construido permitió encontrar configuraciones que satisfacen simultáneamente las restricciones nucleares y astrofísicas. Finalmente, se obtuvieron estrellas con masas máximas de hasta $2.79 \masasol$, compatibles con el componente secundario de \textit{GW190814}, y radios para estrellas canónicas ($1.4 \masasol$) consistentes con las observaciones de NICER.
+    En este trabajo se estudió la ecuación de estado de la materia nuclear en condiciones de alta densidad, que describe la materia al interior de estrellas de neutrones, utilizando la Teoría Relativista de Campo Medio. El objetivo principal fue construir ecuaciones de estado para estrellas de neutrones que satisfagan las restricciones nucleares y astrofísicas actuales, y examinar la viabilidad de estrellas de neutrones masivas que puedan reproducir las observaciones más recientes. Se exploró el espacio de parámetros del modelo relativista de campo medio, analizando las correlaciones entre los acoplamientos de los campos mesónicos ($\sigma, \omega, \rho$) junto con los parámetros de autointeracción escalar, y las propiedades macroscópicas estelares obtenidas mediante la integración de las ecuaciones de Tolman-Oppenheimer-Volkoff. Los resultados mostraron una jerarquía en la influencia de los parámetros: los acoplamientos isoescalares $A_\sigma, A_\omega$ y los términos de autointeracción $b$ y $c$ gobiernan la rigidez de la ecuación de estado y la masa máxima, mientras que el acoplamiento isovectorial $A_\rho$ afecta el radio de la estrella y la energía de simetría, sin alterar las propiedades de saturación ni el límite de masa máxima. El modelo construido permitió encontrar configuraciones que satisfacen simultáneamente las restricciones nucleares y astrofísicas. Finalmente, se obtuvieron estrellas con masas máximas de hasta $2.79 \masasol$, compatibles con el componente secundario de \textit{GW190814}, y radios para estrellas canónicas ($1.4 \masasol$) consistentes con las observaciones de NICER.
 
     
 \end{flushleft}
