Actualización de dedicatoria y agradecimientos en el documento principal

--- a/Libro_Trabajo_de_Grado/main.tex
+++ b/Libro_Trabajo_de_Grado/main.tex
@@ -184,7 +184,11 @@
 \begin{flushright}
     {\Large\itshape Dedicatoria\par}
     \vspace{0.5cm}
-	Cuerpo de la dediatoria
+    Este trabajo está dedicado\\ a quienes me han rodeado desde el primer día\\ y siempre están a mi lado.\\
+    \vspace{\baselineskip}    
+	A Consuelo y Miguel, mis padres.\\
+	A Daniel, mi hermano.\\
+	A Katherin, mi amor.
     
 \end{flushright}
 \vspace*{\fill}
@@ -197,7 +201,26 @@
 \begin{flushleft}
     {\huge\bfseries Agradecimientos\par}
     \vspace{0.5cm}
-	Cuerpo de los agradecimientos
+	No puedo estar más agradecido por todo lo que he aprendido a ser, a saber y a sentir en estos cinco años que han pasado. La que es sin dudas mi mejor etapa, es gracias a quienes la han vivido conmigo. Hoy vuelvo atrás y me llena de alegría, orgullo y un poco de melancolía el cumplir un gran sueño.\\
+	\vspace{\baselineskip}
+	
+	A mis padres les debo mucho esfuerzo y demasiado sacrificio, las cargas son pesadas y el camino es culebrero, pero las fuerzas son prestadas. Siempre mi corazón tendrá un salón entero en su nombre y honor.
+	
+	A mis directores Laura y José, por brindarme la oportunidad de trabajar en lo que me gusta y confirmar que es posible, por prestarme su tiempo y su conocimiento cada semana, y por permitirme degustar las valiosas y emocionantes pasantías de investigación.
+	
+	A Katherin, mi amor incondicional, por enseñarme el cariño que desconocía, por preocuparse más por mí que yo mismo, por acompañarme en mis pesares y júbilos, por ser mis hombros y mis brazos y por ser mi impulso cuando la fricción no es despreciable.
+	
+	A mis amigos y hermanos físicos. A Jhonny por recordarme lo que significa estar por y para alguien, y por alquilarme su escucha los lunes frente al estadio. A Sofi y Sharith, mis primeras amistades, con quienes crecí y medianamente maduré lleno de risas e ilusiones. A Brayan, Santi, Bryan y Jhonatan, por innumerables conversaciones de física y otros menesteres, por alegrarme cada taller y laboratorio desde el primer día, por enseñarme tanto y compartir mis pasiones. A mis vecinos de oficina en el Halley, por hacer tan grata mi estadía, por los juegos de cartas, de balón y de piscina que recuerdo con tanto cariño entre tanto esfuerzo. A mi familia de Judo, por enseñarme una pasión que desconocía, por tantas nuevas experiencias y por ser ese escape que tanto hace falta.
+	
+	Al grupo Halley y mi codirector Luis por acogerme y brindarme la oportunidad de compartir ciencia con las comunidades, así como facilitarme auxiliaturas salvadoras. A la Escuela de Física, sus docentes y administrativos, por brindarme una educación de calidad y formarme como el profesional que soy hoy.
+	
+	\vspace{\baselineskip}
+	
+	Sin ninguno de ustedes, este logro no sabría tan bien.
+	
+	\begin{center}
+		\textit{Si he visto más lejos, es parándome sobre hombros de Gigantes.}
+	\end{center}
     
 \end{flushleft}
 \vspace*{\fill}
