Correcciones de redacción y agradecimientos en el documento principal

--- a/Libro_Trabajo_de_Grado/main.tex
+++ b/Libro_Trabajo_de_Grado/main.tex
@@ -210,7 +210,7 @@
 	
 	A Katherin, mi amor incondicional, por enseñarme el cariño que desconocía, por preocuparse más por mí que yo mismo, por acompañarme en mis pesares y júbilos, por ser mis hombros y mis brazos y por ser mi impulso cuando la fricción no es despreciable.
 	
-	A mis amigos y hermanos físicos. A Jhonny por recordarme lo que significa estar por y para alguien, y por alquilarme su escucha los lunes frente al estadio. A Sofi y Sharith, mis primeras amistades, con quienes crecí y medianamente maduré lleno de risas e ilusiones. A Brayan, Santi, Bryan y Jhonatan, por innumerables conversaciones de física y otros menesteres, por alegrarme cada taller y laboratorio desde el primer día, por enseñarme tanto y compartir mis pasiones. A mis vecinos de oficina en el Halley, por hacer tan grata mi estadía, por los juegos de cartas, de balón y de piscina que recuerdo con tanto cariño entre tanto esfuerzo. A mi familia de Judo, por enseñarme una pasión que desconocía, por tantas nuevas experiencias y por ser ese escape que tanto hace falta.
+	A mis amigos y hermanos físicos. A Jhonny por recordarme lo que significa estar por y para alguien, y por alquilarme su escucha los lunes frente al estadio. A Sofi y Sharith, mis primeras amistades, con quienes crecí y medianamente maduré lleno de risas e ilusiones. A Brayan, Santi, Bryan y Jhonatan, por innumerables conversaciones de física y otros menesteres, por alegrarme cada taller y laboratorio desde el primer día, por enseñarme tanto y compartir mis pasiones. A mis vecinos de oficina en el Halley, por hacer tan grata mi estadía, por los juegos de cartas, de balón y de piscina que recuerdo con tanto cariño entre tanto esfuerzo. A mi familia de Judo, por enseñarme una pasión que desconocía, por tantas nuevas experiencias y por ser ese escape que tanto hace falta. A todos los demás que no me entran en esta página pero que siempre recibo con un abrazo fuerte y sincero.
 	
 	Al grupo Halley y mi codirector Luis por acogerme y brindarme la oportunidad de compartir ciencia con las comunidades, así como facilitarme auxiliaturas salvadoras. A la Escuela de Física, sus docentes y administrativos, por brindarme una educación de calidad y formarme como el profesional que soy hoy.
 	
